...
				<!--<Button-->
					<!--android:id="@+id/home"-->
					<!--android:layout_width="match_parent"-->
					<!--android:layout_height="wrap_content"-->
					<!--android:background="@drawable/mybutton"-->
					<!--android:onClick="bsmmuhome"-->
					<!--android:text="Home Page"-->
					<!--android:textAppearance="?android:attr/textAppearanceMedium"-->
					<!--android:textColor="#7BDA0B" />-->

				<!--<LinearLayout-->
					<!--style="@style/linearLayout"-->
					<!--android:layout_width="wrap_content"-->
...
					<!--android:padding="5dp"-->
					<!--android:text="@string/hmohf"-->
					<!--android:textColor="#000E60"-->
					<!--android:textSize="15sp" />-->

				<!--<Button-->
					<!--android:id="@+id/mohfhome"-->
					<!--android:layout_width="match_parent"-->
					<!--android:layout_height="wrap_content"-->
					<!--android:background="@drawable/bpsc_govt"-->
					<!--android:onClick="mohfhome"-->
					<!--android:text="Home Page"-->
					<!--android:textAppearance="?android:attr/textAppearanceMedium"-->
...
					<!--<TextView-->
						<!--android:layout_width="0dp"-->
						<!--android:layout_height="wrap_content"-->
						<!--android:layout_weight="0.005" />-->

					<!--<Button-->
						<!--android:id="@+id/regi2"-->
						<!--android:layout_width="0dp"-->
						<!--android:layout_height="wrap_content"-->
						<!--android:layout_weight="1"-->
						<!--android:background="@drawable/bcsdept"-->
						<!--android:gravity="center"-->
						<!--android:text="@string/departmental"-->
...
